--- a/src/main/asciidoc/datagrams.adoc
+++ b/src/main/asciidoc/datagrams.adoc
@@ -29,7 +29,7 @@ and NetClient (see above).
 To use UDP you first need t create a `link:jsdoc/datagram_socket-DatagramSocket.html[DatagramSocket]`. It does not matter here if you only want to send data or send
 and receive.
 
-[source,java]
+[source,js]
 ----
 var socket = vertx.createDatagramSocket({
 });
@@ -48,7 +48,7 @@ This means each packet can be sent to a different remote peer.
 
 Sending packets is as easy as shown here:
 
-[source,java]
+[source,js]
 ----
 var Buffer = require("vertx-js/buffer");
 var socket = vertx.createDatagramSocket({
@@ -82,7 +82,7 @@ The `link:jsdoc/datagram_packet-DatagramPacket.html[DatagramPacket]` has the fol
 
 So to listen on a specific address and port you would do something like shown here:
 
-[source,java]
+[source,js]
 ----
 var socket = vertx.createDatagramSocket({
 });
@@ -117,7 +117,7 @@ The only difference is that you would pass in a multicast group address to the s
 
 This is show here:
 
-[source,java]
+[source,js]
 ----
 var Buffer = require("vertx-js/buffer");
 var socket = vertx.createDatagramSocket({
@@ -150,7 +150,7 @@ The `link:jsdoc/datagram_packet-DatagramPacket.html[DatagramPacket]` has the fol
 So to listen on a specific address and port and also receive packets for the Multicast group 230.0.0.1 you
 would do something like shown here:
 
-[source,java]
+[source,js]
 ----
 var socket = vertx.createDatagramSocket({
 });
@@ -178,7 +178,7 @@ In this situations you can first start to listen for them and then later unliste
 
 This is shown here:
 
-[source,java]
+[source,js]
 ----
 var socket = vertx.createDatagramSocket({
 });
@@ -220,7 +220,7 @@ This an expert feature.
 To block multicast from a specific address you can call `blockMulticastGroup(...)` on the DatagramSocket
 like shown here:
 
-[source,java]
+[source,js]
 ----
 var socket = vertx.createDatagramSocket({
 });
