--- a/src/main/asciidoc/shareddata.adoc
+++ b/src/main/asciidoc/shareddata.adoc
@@ -20,7 +20,7 @@ so you don't have to worry about protecting that state by synchronising access t
 
 Here's an example of using a shared local map:
 
-[source,java]
+[source,js]
 ----
 var Buffer = require("vertx-js/buffer");
 
@@ -59,7 +59,7 @@ You get an instance of `link:jsdoc/async_map-AsyncMap.html[AsyncMap]` with
 
 Getting the map is asynchronous and the result is returned to you in the handler that you specify. Here's an example:
 
-[source,java]
+[source,js]
 ----
 
 var sd = vertx.sharedData();
@@ -80,7 +80,7 @@ You put data in a map with `link:jsdoc/async_map-AsyncMap.html#put[put]`.
 
 The actual put is asynchronous and the handler is notified once it is complete:
 
-[source,java]
+[source,js]
 ----
 
 map.put("foo", "bar", function (resPut, resPut_err) {
@@ -98,7 +98,7 @@ You get data from a map with `link:jsdoc/async_map-AsyncMap.html#get[get]`.
 
 The actual get is asynchronous and the handler is notified with the result some time later
 
-[source,java]
+[source,js]
 ----
 
 map.get("foo", function (resGet, resGet_err) {
@@ -136,7 +136,7 @@ While you own the lock no other caller, anywhere on the cluster will be able to 
 When you've finished with the lock, you call `link:jsdoc/lock-Lock.html#release[release]` to release it, so
 another caller can obtain it.
 
-[source,java]
+[source,js]
 ----
 sd.getLock("mylock", function (res, res_err) {
   if ((res != null)) {
@@ -157,7 +157,7 @@ sd.getLock("mylock", function (res, res_err) {
 You can also get a lock with a timeout. If it fails to obtain the lock within the timeout the handler will be called
 with a failure:
 
-[source,java]
+[source,js]
 ----
 sd.getLockWithTimeout("mylock", 10000, function (res, res_err) {
   if ((res != null)) {
@@ -178,7 +178,7 @@ You can do this with `link:jsdoc/counter-Counter.html[Counter]`.
 
 You obtain an instance with `link:jsdoc/shared_data-SharedData.html#getCounter[getCounter]`:
 
-[source,java]
+[source,js]
 ----
 sd.getCounter("mycounter", function (res, res_err) {
   if ((res != null)) {
