--- a/src/main/asciidoc/streams.adoc
+++ b/src/main/asciidoc/streams.adoc
@@ -26,7 +26,7 @@ async files, WebSockets, etc.
 A naive way to do this would be to directly take the data that's been read and immediately write it
 to the `NetSocket`, for example:
 
-[source,java]
+[source,js]
 ----
 var server = vertx.createNetServer({
   "port" : 1234,
@@ -49,7 +49,7 @@ wasn't reading very fast, effectively putting back-pressure on the connection.
 Since `NetSocket` implements `WriteStream`, we can check if the `WriteStream` is full before
 writing to it:
 
-[source,java]
+[source,js]
 ----
 var server = vertx.createNetServer({
   "port" : 1234,
@@ -69,7 +69,7 @@ server.connectHandler(function (sock) {
 This example won't run out of RAM but we'll end up losing data if the write queue gets full. What we
 really want to do is pause the `NetSocket` when the write queue is full. Let's do that:
 
-[source,java]
+[source,js]
 ----
 var server = vertx.createNetServer({
   "port" : 1234,
@@ -89,7 +89,7 @@ server.connectHandler(function (sock) {
 We're almost there, but not quite. The `NetSocket` now gets paused when the file is full, but we also need to unpause
 it when the write queue has processed its backlog:
 
-[source,java]
+[source,js]
 ----
 var server = vertx.createNetServer({
   "port" : 1234,
@@ -117,7 +117,7 @@ It's very common to want to do this when writing Vert.x applications, so we prov
 called `link:jsdoc/pump-Pump.html[Pump]` which does all this hard work for you. You just feed it the `ReadStream` and
 the `WriteStream` and it tell it to start:
 
-[source,java]
+[source,js]
 ----
 var Pump = require("vertx-js/pump");
 var server = vertx.createNetServer({
